Fix caret not visible on textarea

--- a/web/assets/variables.scss
+++ b/web/assets/variables.scss
@@ -138,6 +138,7 @@ label[style].theme--light.v-label {
 .v-input input,
 .v-input.v-textarea textarea {
   padding-left: 10px;
+  caret-color: #37474f;
 }
 .v-avatar.rounded-50 .v-image {
   border-radius: 50%;
